# FitterResponseMap

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
data/: example.csv  response_dictionary.json  stephane_example.csv  test.csv
data/response/: example.csv
data/response/pathfitter/: ReconstructionMap_WbLS_XXpct_Gd_XXpct_PMTcvg_XXpct_RPMT_XXXXmm.csv  example.csv  make_dictionary.py  response_dictionary.json  stephane_example.csv  wbls_1pct_WM_0820_4700mm_10pct.csv  wbls_1pct_WM_0820_4700mm_20pct.csv  wbls_1pct_WM_0820_4700mm_40pct.csv  wbls_1pct_WM_0820_4700mm_80pct.csv  wbls_1pct_WM_0820_5700mm_10pct.csv  wbls_1pct_WM_0820_5700mm_20pct.csv  wbls_1pct_WM_0820_5700mm_40pct.csv  wbls_1pct_WM_0820_5700mm_80pct.csv  wbls_1pct_WM_0820_6700mm_10pct.csv  wbls_1pct_WM_0820_6700mm_20pct.csv  wbls_1pct_WM_0820_6700mm_40pct.csv  wbls_1pct_WM_0820_6700mm_80pct.csv  wbls_1pct_WM_0820_7700mm_10pct.csv  wbls_1pct_WM_0820_7700mm_20pct.csv  wbls_1pct_WM_0820_7700mm_40pct.csv  wbls_1pct_WM_0820_7700mm_80pct.csv  wbls_1pct_WM_0820_8700mm_10pct.csv  wbls_1pct_WM_0820_8700mm_20pct.csv  wbls_1pct_WM_0820_8700mm_40pct.csv  wbls_1pct_WM_0820_8700mm_80pct.csv  wbls_3pct_WM_0820_4700mm_10pct.csv  wbls_3pct_WM_0820_4700mm_20pct.csv  wbls_3pct_WM_0820_4700mm_40pct.csv  wbls_3pct_WM_0820_4700mm_80pct.csv  wbls_3pct_WM_0820_5700mm_10pct.csv  wbls_3pct_WM_0820_5700mm_20pct.csv  wbls_3pct_WM_0820_5700mm_40pct.csv  wbls_3pct_WM_0820_5700mm_80pct.csv  wbls_3pct_WM_0820_6700mm_10pct.csv  wbls_3pct_WM_0820_6700mm_20pct.csv  wbls_3pct_WM_0820_6700mm_40pct.csv  wbls_3pct_WM_0820_6700mm_80pct.csv  wbls_3pct_WM_0820_7700mm_10pct.csv  wbls_3pct_WM_0820_7700mm_20pct.csv  wbls_3pct_WM_0820_7700mm_40pct.csv  (+5 more)
data/response/pathfitter/electrons/: wbls_1pct_WM_0820_4700mm_40pct.csv  wbls_1pct_WM_0820_4700mm_80pct.csv  wbls_1pct_WM_0820_5700mm_10pct.csv  wbls_1pct_WM_0820_6700mm_20pct.csv  wbls_1pct_WM_0820_8700mm_10pct.csv  wbls_1pct_WM_0820_8700mm_20pct.csv  wbls_1pct_WM_0820_8700mm_40pct.csv  wbls_3pct_WM_0820_4700mm_40pct.csv  wbls_3pct_WM_0820_4700mm_80pct.csv  wbls_3pct_WM_0820_5700mm_10pct.csv  wbls_3pct_WM_0820_5700mm_40pct.csv  wbls_3pct_WM_0820_5700mm_80pct.csv  wbls_3pct_WM_0820_6700mm_40pct.csv  wbls_3pct_WM_0820_8700mm_40pct.csv
demo/: CMakeLists.txt  astaire.cc  frpdemo.cc  frprat.cc  pathb.cc  sample_response.py
demo/pathb_src/: CMakeLists.txt
demo/src/: CMakeLists.txt
demo/src/include/: ArgParsePB.h  AstaireDS.h  ProgressBar.h
demo/src/src/: ArgParsePB.cc  AstaireDS.cc  ProgressBar.cc
src/: CMakeLists.txt
src/include/: EnergyResponse.h  FitterResponseMap.h  MCLookup.h  PMTGenerator.h  VertexResponse.h  csv.h
src/src/: EnergyResponse.cc  FitterResponseMap.cc  MCLookup.cc  PMTGenerator.cc  VertexResponse.cc  json.cc
